--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,14 +3,16 @@
     padding-top: 7rem;
     overflow: hidden;
 
-    .cta{
-        margin-top: 2.5rem;
-        display: flex;
-         gap :1.2rem;
-    }
+   
     
     
     
+}
+.cta{
+    margin-top: 2.5rem;
+    display: flex;
+     gap :1.2rem;
+     justify-content:center;
 }
 .header_socials{
     display:flex;
@@ -19,31 +21,33 @@
     gap:0.8rem;
     position: absolute;
     left:0;
-   
+   bottom:3rem;
 
-
-    &::after{
+}
+.header_socials::after{
         content: "";
         width:1px;
         height: 2rem;
         background: var(--color-primary);
     }
-}
+
 .header_container{
     text-align: center;
     height: 100%;position: relative;
 }
 .me{
-    background: var(--color-primary);
+    background: linear-gradient( var(--color-primary),transparent);
     width:22rem;
     height:30rem;
     position:absolute;
-    left:49%;
+    left:calc(50% - 11rem );
     margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
     overflow:hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem ;
+    padding: 5rem 1.5rem 1.5rem 1.5rem;
+    
 }
+
 
 .scroll_down{
     position:absolute;
@@ -54,3 +58,20 @@
     font-weight:300;
 
 }
+
+/***********************MEDIA QUERY MEDIUM DEVICes *****************/
+@media screen and (max-width:1024px){
+   .header{
+    height:68vh;
+   }
+  }
+  /***********************MEDIA QUERY SMALL DEVICes *****************/
+  @media screen and (max-width:600px){
+    .header{
+        height:100vh;
+       }
+       .header_socials, .scroll_down{
+        display:none;
+       }
+  }
+  
